--- a/pom.xml
+++ b/pom.xml
@@ -520,6 +520,14 @@
 			<version>${serenity.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.eclipse.mylyn.github/org.eclipse.egit.github.core -->
+		<dependency>
+		    <groupId>org.eclipse.mylyn.github</groupId>
+		    <artifactId>org.eclipse.egit.github.core</artifactId>
+		    <version>2.1.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
